--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,13 @@ header h1 {
   opacity: 0.7;
 }
 
+.timestamp {
+  font-size: 0.875rem;
+  color: #5a3f2f;
+  opacity: 0.6;
+  margin-left: auto;
+}
+
 .tweet-message {
   font-size: 0.9375rem;
   color: #2c1b10;
